--- a/scss/_generals.scss
+++ b/scss/_generals.scss
@@ -1,14 +1,32 @@
-html{
-    box-sizing: border-box;
+html {
+	height: 100%;
+	box-sizing: border-box;
 }
 
 *,
-*::after,
-*::before{
-    box-sizing: inherit;
+*::before,
+*::after {
+	box-sizing: inherit;
+	scroll-behavior: smooth;
 }
 
+
 body {
-    //font-size: 16px;
-    font-family: 'Public Sans', sans-serif;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	font-family:  'Arial', 'sans-serif';
+	margin: 0;
+	padding: 0;
+}
+
+img {
+	max-width: 100%;
+	height: auto;
+	vertical-align: middle;
+  object-fit: cover;
+}
+
+.main {
+	flex-grow: 1;
 }
